New GD Home page created and setting depreciated for overriding normal home page - CHANGED
Email address with .coop TLD not validated - FIXED
Yoast meta title, description & keywords now also works with %location% tag - ADDED
GeoProperty theme compatibility pack - ADDED
Related listing widget does not reset the $post value properly - FIXED

v1.5.3
If tax query has 'relation' set then it will throw WARNING in wp_list_pluck - FIXED
listing-preview page template removed as details page template now used - CHANGED
In some cases with https when saving a listing it can change image url - FIXED
Cyrillic letters does not supported in GD Import - FIXED
Event map infowindow not showing dates properly - FIXED
Conflicts due to same id for password field in login and register form - FIXED
Jobby compatibility pack - ADDED
Avatar links to the member page are inconsistent - FIXED
Map popups with no image can be malformed on some themes - FIXED
WPML listings not exports original post id for some listings - FIXED
Datepicker custom field can show wrong date on edit if left blank on save - FIXED
Google maps zoom and street view buttons hidden with new Google layout - FIXED
New GD page gd-info added for displaying info messages - ADDED
New GD page gd-login added for login/register - ADDED
Some large imports can stop at 98/99% but are actually finished - FIXED
Image popup modal on detail page doesn't resize according to screen size - FIXED
Editing CPT tag not updating tag for associated CPT listing - FIXED
Changes made for marker cluster addon to allow server side clustering - ADDED
New login page now compatible with buddypress registration form for redirect option - CHANGED
GD import speed improved -  CHANGED
Hit enter to search delayed by 100ms so other functions have a chance to change settings - CHANGED
Unused css image classes removed - REMOVED
Email custom field now used mailto: for the address and filter added to change the name output - CHANGED