@@ -20,6 +20,7 @@ Email address with .coop TLD not validated - FIXED
 Yoast meta title, description & keywords now also works with %location% tag - ADDED
 GeoProperty theme compatibility pack - ADDED
 Related listing widget does not reset the $post value properly - FIXED
+Email subjects and messages can now be translated in .po file if original messages is used - CHANGED
 
 v1.5.3
 If tax query has 'relation' set then it will throw WARNING in wp_list_pluck - FIXED
